--- a/in-linked/src/styles.scss
+++ b/in-linked/src/styles.scss
@@ -1,5 +1,13 @@
-/* Main file for styles (imports and global styles) */
+/* GLOBAL STYLESHEET */
 
-/* IMPORTS */
+/* Bootstrap Setup */
+@import '../node_modules/bootstrap/scss/mixins';
+@import '../node_modules/bootstrap/scss/functions';
+@import '../node_modules/bootstrap/scss/variables';
+@import '../node_modules/bootstrap/scss/utilities';
+@import '../node_modules/bootstrap/scss/mixins';
 
-/* GLOBAL STYLES */
+/* Bootstrap Reboot */
+@import '../node_modules/bootstrap/scss/reboot';
+
+/* Bootstrap Components */
