feat(_colors.scss): Mapped names to colors

--- a/in-linked/src/global/_colors.scss
+++ b/in-linked/src/global/_colors.scss
@@ -1,3 +1,7 @@
 /* Map color name to Hex */
 
 $cornflower-blue: #6195ED;
+$gallery: #ededed;
+$tundora: #424242;
+$whisper: #F5F5FA;
+$pickled-bluewood: #2D3C55;
