--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -1,3 +1,26 @@
-<p>
-  navbar works!
-</p>
+<nav class="navbar navbar-light bg-faded">
+  <!-- This button shows when the display gets small enough -->
+  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navCollapseData" aria-controls="navCollapseData" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+  </button>
+  <!-- The items in the navbar -->
+  <a class="navbar-brand" href="#">{{ brandTitle }}</a>
+
+  <!--<div class="collapse navbar-collapse" id="navCollapseData">-->
+  <ul class="navbar-nav mr-auto mt-2 mt-md-0">
+    <li class="nav-item active">
+      <a class="nav-link" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Link</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Disabled</a>
+    </li>
+  </ul>
+  <form class="form-inline my-2 my-lg-0">
+    <input class="form-control mr-sm-2" type="text" placeholder="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+  <!-- </div>  -->
+</nav>
