--- a/in-linked/src/styles.scss
+++ b/in-linked/src/styles.scss
@@ -6,6 +6,11 @@
 @import '../node_modules/bootstrap/scss/variables';
 @import '../node_modules/bootstrap/scss/utilities';
 
+@import '../node_modules/bootstrap/scss/utilities/display';
+@import '../node_modules/bootstrap/scss/utilities/align';
+@import '../node_modules/bootstrap/scss/utilities/flex';
+@import '../node_modules/bootstrap/scss/utilities/position';
+
 /* Bootstrap Reboot */
 @import '../node_modules/bootstrap/scss/reboot';
 
