--- a/in-linked/src/app/app.component.html
+++ b/in-linked/src/app/app.component.html
@@ -1,4 +1,2 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <app-navbar></app-navbar>
-</div>
+<app-navbar *ngIf="showNavbar"></app-navbar>
+<router-outlet></router-outlet>
