--- a/in-linked/src/styles.scss
+++ b/in-linked/src/styles.scss
@@ -22,3 +22,7 @@
 @import '../node_modules/bootstrap/scss/forms';
 @import '../node_modules/bootstrap/scss/input-group';
 @import '../node_modules/bootstrap/scss/buttons';
+
+html, body {
+    height: 100%;
+}
