feat(login): Minor update to login UI, added new colors, added padding/margin constant, cleaned up css

--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -1,21 +1,21 @@
-<div class="row">
-  <div class="col-md-8 remove-padding d-none d-md-block" id="background-div"></div>
-  <div class="col-md-4 remove-padding">
-    <div class="container" id="doodoo">
-      <div class="container">
-        <h1>Log in to inLinked</h1>
-        <form #login="ngForm">
-          <div class="form-group">
-            <label for="user-email">Email</label>
-            <input type="text" class="form-control" id="user-email">
-          </div>
-          <div class="form-group">
-            <label for="user-password">Password</label>
-            <input type="password" class="form-control" id="user-password">
-          </div>
-          <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">Submit</button>
-        </form>
-      </div>
+<div class="login-container row">
+
+  <div class="col d-none d-md-block" id="background-div"></div>
+
+  <div class="col login-panel">
+    <div class="container">
+      <h1>Log in to inLinked</h1>
+      <form #login="ngForm">
+        <div class="form-group">
+          <label for="user-email">Email</label>
+          <input type="text" class="form-control" id="user-email">
+        </div>
+        <div class="form-group">
+          <label for="user-password">Password</label>
+          <input type="password" class="form-control" id="user-password">
+        </div>
+        <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">Submit</button>
+      </form>
     </div>
   </div>
 </div>
