--- a/in-linked/src/global/_colors.scss
+++ b/in-linked/src/global/_colors.scss
@@ -1,7 +1,11 @@
 /* Map color name to Hex */
 
-$cornflower-blue: #6195ED;
+$blue-ribbon: #0066FF;
 $gallery: #ededed;
 $tundora: #424242;
 $whisper: #F5F5FA;
 $pickled-bluewood: #2D3C55;
+
+$blue-dianne: #213b4f;
+$chathams-blue: #153c8a;
+$elephant: #10304a;
