--- a/in-linked/src/app/app.component.html
+++ b/in-linked/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-navbar *ngIf="showNavbar"></app-navbar>
-<router-outlet></router-outlet>
+<div>
+    <app-navbar *ngIf="showNavbar"></app-navbar>
+    <router-outlet></router-outlet>
+</div>
