--- a/in-linked/src/global/_app.scss
+++ b/in-linked/src/global/_app.scss
@@ -4,4 +4,10 @@
 /* EXAMPLE */
 
 /* Navbar */
-$navbar-bg: $cornflower-blue;
+
+/* Login */
+$login-primary: $blue-dianne;
+$login-gradient-1: $elephant;
+$login-gradient-2: $chathams-blue;
+
+$padding-base: 1rem;
