--- a/in-linked/src/styles.scss
+++ b/in-linked/src/styles.scss
@@ -23,6 +23,16 @@
 @import '../node_modules/bootstrap/scss/input-group';
 @import '../node_modules/bootstrap/scss/buttons';
 
+/* Custom styles */
+@import './global/components/button';
+
+/* Fonts */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+
 html, body {
+    font-family: "Open Sans", -apple-system, BlinkMacSystemFont, "Segoe UI",
+        "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+        "Segoe UI Emoji", "Segoe UI Symbol";
     height: 100%;
 }
