--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -8,13 +8,15 @@
       <form #login="ngForm">
         <div class="form-group">
           <label for="user-email">Email</label>
-          <input type="text" class="form-control" id="user-email">
+          <input name="user-email" type="text" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
+          <div *ngIf="email.touched && email.errors?.required">Please enter an email.</div>
         </div>
         <div class="form-group">
           <label for="user-password">Password</label>
-          <input type="password" class="form-control" id="user-password">
+          <input name="user-password" type="password" class="form-control" id="user-password" [(ngModel)]="userPassword" #password="ngModel" required>
+          <div *ngIf="password.touched && password.errors?.required">Please enter a password.</div>
         </div>
-        <button type="submit" class="btn btn-success" [disabled]="!heroForm.form.valid">Submit</button>
+        <button type="submit" class="btn btn-success" [disabled]="!login.valid">Submit</button>
       </form>
     </div>
   </div>
