feat(login.component.html): Added mobile responsiveness

--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="login-container row">
 
-  <div class="col d-none d-md-block" id="background-div"></div>
+  <div class="col d-none d-sm-block" id="background-div"></div>
 
   <div class="col login-panel">
     <div class="container">
