--- a/in-linked/src/app/pages/login/login.component.scss
+++ b/in-linked/src/app/pages/login/login.component.scss
@@ -12,7 +12,7 @@
         background-color: $login-primary;
         color: #fff;
         display: flex;
-        max-width: 500px;
+        max-width: $small-screen;
         padding: $padding-base * 3.5;
     }
 
