feat(login.component.html): Changed the color of warning messages

--- a/in-linked/src/global/_app.scss
+++ b/in-linked/src/global/_app.scss
@@ -9,6 +9,7 @@
 $login-primary: $blue-dianne;
 $login-gradient-1: $elephant;
 $login-gradient-2: $chathams-blue;
+$login-warning: $gold;
 
 $padding-base: 1rem;
 
