--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -9,12 +9,12 @@
         <div class="form-group">
           <label for="user-email">Email</label>
           <input name="user-email" type="text" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
-          <div *ngIf="email.touched && email.errors?.required">Please enter an email.</div>
+          <div class="login-warning-message" *ngIf="email.touched && email.errors?.required">Please enter an email.</div>
         </div>
         <div class="form-group">
           <label for="user-password">Password</label>
           <input name="user-password" type="password" class="form-control" id="user-password" [(ngModel)]="userPassword" #password="ngModel" required>
-          <div *ngIf="password.touched && password.errors?.required">Please enter a password.</div>
+          <div class="login-warning-message" *ngIf="password.touched && password.errors?.required">Please enter a password.</div>
         </div>
         <button type="submit" class="btn btn-success" [disabled]="!login.valid">Submit</button>
       </form>
