--- a/in-linked/src/app/pages/login/login.component.scss
+++ b/in-linked/src/app/pages/login/login.component.scss
@@ -27,16 +27,16 @@
         margin-left: 0;
         background-image: url("../../../assets/mountain-background.jpg");
 
-        &:before {
-            content: '';
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 0;
-            background-image: linear-gradient(to bottom right, $login-gradient-1, $login-gradient-2);
-            opacity: .3; 
-          }
+        // &:before {
+        //     content: '';
+        //     position: absolute;
+        //     top: 0;
+        //     right: 0;
+        //     bottom: 0;
+        //     left: 0;
+        //     background-image: linear-gradient(to bottom right, $login-gradient-1, $login-gradient-2);
+        //     opacity: .3; 
+        //   }
     }
 
     .login-warning-message {
