feat(app.component.html): Renamed app-navbar to app-nav

--- a/in-linked/src/app/app.component.html
+++ b/in-linked/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div>
-    <app-navbar *ngIf="showNavbar"></app-navbar>
+    <app-nav *ngIf="showNavbar"></app-nav>
     <router-outlet></router-outlet>
 </div>
