--- a/in-linked/src/app/pages/user-feed/user-feed.component.html
+++ b/in-linked/src/app/pages/user-feed/user-feed.component.html
@@ -1,3 +1,43 @@
-<p>
-  user-feed works!
-</p>
+<!-- This page needs a lot of cleaning up. -->
+
+<div class="container feed-container">
+  <div class="row">
+    <div class="col-md-3 d-none d-md-block">
+      <div class="card">
+        <img class="card-img-top rounded-circle" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg"
+          alt="Card image cap">
+
+        <div class="card-body">
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+            content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-6">
+      <div class="card post-card">
+        <div class="card-body">
+          <h5 class="card-title">
+            <img class="inline-image" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
+            Bonnie
+          </h5>
+          <p class="card-text">Puppies deemed royalty at Black Gala event.</p>
+          <img class="card-img" src="https://images.unsplash.com/photo-1539383000475-977eb7138545?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=5c0044fa4f3d3db651234bf8e35f6e3a&auto=format&fit=crop&w=1050&q=80">
+          <input type="text" placeholder= "Add a comment">
+          <input type="submit" value="Post">
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3 d-none d-md-block">
+      <div class="card">
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><img class="inline-image" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
+            Doggo McDoggo</li>
+          <li class="list-group-item"><img class="inline-image" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
+            Dogoo DoggyMcDoggo</li>
+          <li class="list-group-item"><img class="inline-image" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
+            Doggo de Doggo</li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
