--- a/in-linked/src/global/_colors.scss
+++ b/in-linked/src/global/_colors.scss
@@ -3,11 +3,11 @@
 $blue-ribbon: #0066FF;
 $gallery: #ededed;
 $tundora: #424242;
-$whisper: #F5F5FA;
-$pickled-bluewood: #2D3C55;
+$whisper: #f5f5fA;
+$pickled-bluewood: #2d3c55;
 
 $blue-dianne: #213b4f;
 $chathams-blue: #153c8a;
 $elephant: #10304a;
 
-$gold: #FFD700;
+$gold: #ffd700;
