--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -1,23 +1,23 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">{{ brandTitle }}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar fixed-top navbar-expand-sm navbar-dark">
+  <a class="navbar-brand" href="./">{{ brandTitle }}</a>
+  <button class="navbar-toggler" (click)="toggleNavbar()" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse justify-content-around" id="navbarSupportedContent">
-    <div>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  <div class="collapse navbar-collapse justify-content-around" [ngClass]="status ? 'show-nav' : 'hide-nav'" id="navbarSupportedContent">
+    <form class="navbar-form navbar-left search-form" role="search">
+        <div class="form-group" >
+            <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate">
+            <input class="btn btn-success search-submit" type="submit" value="Search">
+        </div>
       </form>
-    </div>
-    <div>
+    <div class="navbar-right">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="#">Jobs</a>
+          <a class="nav-link" routerLink="./search">Jobs</a>
         </li>
         <li>
-          <a class="nav-link" href="#">Sammi</a>
+          <a class="nav-link" routerLink="./candidate">Sammi</a>
         </li>
       </ul>
     </div>
