--- a/in-linked/src/styles.scss
+++ b/in-linked/src/styles.scss
@@ -15,16 +15,11 @@
 @import '../node_modules/bootstrap/scss/reboot';
 
 /* Bootstrap Components */
-@import '../node_modules/bootstrap/scss/bootstrap';
-@import '../node_modules/bootstrap/scss/navbar';
-@import '../node_modules/bootstrap/scss/nav';
-@import '../node_modules/bootstrap/scss/transitions';
-@import '../node_modules/bootstrap/scss/forms';
-@import '../node_modules/bootstrap/scss/input-group';
-@import '../node_modules/bootstrap/scss/buttons';
+@import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 /* Custom styles */
 @import './global/components/button';
+@import './global/colors';
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,700');
@@ -35,4 +30,8 @@ html, body {
         "Roboto", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
         "Segoe UI Emoji", "Segoe UI Symbol";
     height: 100%;
+}
+
+body {
+    background-color: $whisper;
 }
