--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   </button>
 
   <div class="collapse navbar-collapse justify-content-around" [ngClass]="status ? 'show-nav' : 'hide-nav'" id="navbarSupportedContent">
-    <form class="navbar-form navbar-left search-form" role="search">
+    <form class="navbar-form text-center search-form" role="search">
         <div class="form-group" >
             <input type="search" class="form-control search-bar" placeholder="Search for an enterprise or candidate">
             <input class="btn btn-success search-submit" type="submit" value="Search">
