--- a/in-linked/src/app/layouts/navbar/navbar.component.scss
+++ b/in-linked/src/app/layouts/navbar/navbar.component.scss
@@ -26,7 +26,8 @@
 
 .search-bar{
     display: inline-block;
-    width: 50%;
+    width: 70%;
+    max-width: $small-screen;
     padding-right: 50px;
 }
 
