--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -5,7 +5,7 @@
   <div class="col login-panel">
     <div class="container">
       <h1>Log in to inLinked</h1>
-      <form #login="ngForm">
+      <form (ngSubmit)="onSubmit()" #login="ngForm">
         <div class="form-group">
           <label for="user-email">Email</label>
           <input name="user-email" type="text" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
@@ -16,7 +16,7 @@
           <input name="user-password" type="password" class="form-control" id="user-password" [(ngModel)]="userPassword" #password="ngModel" required>
           <div class="login-warning-message" *ngIf="password.touched && password.errors?.required">Please enter a password.</div>
         </div>
-        <button type="submit" class="btn btn-success" [disabled]="!login.valid">Submit</button>
+        <button type="submit" class="btn btn-success" [disabled]="!login.form.valid">Submit</button>
       </form>
     </div>
   </div>
