--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -5,7 +5,8 @@
   <div class="col login-panel">
     <div class="container">
       <h1>Log in to inLinked</h1>
-      <form (ngSubmit)="onSubmit()" #login="ngForm">
+      <form #login="ngForm" (ngSubmit)="onSubmit(); login.reset();">
+        <div *ngIf="errorMessage" class="login-warning-message">{{errorMessage}}</div>
         <div class="form-group">
           <label for="user-email">Email</label>
           <input name="user-email" type="text" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
