--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -2,40 +2,48 @@
   <div class="cover-photo" [style.backgroundImage]="'url(src=../../../../../assets/dog-cover-photo.jpg)'"></div>
   <img class="profile-photo" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
   <div class="card card-move-up">
-    <h2>Bonnie</h2>
+    <h1>Bonnie</h1><div class="float-right"><fa-icon icon="coffee"></fa-icon></div>
     <p>I am ready to conquer the world and make it less ruff for dogs everywhere. I believe in Dog Equality.</p>
   </div>
 </div>
 
-<div class="container">
-  <div class="card">
-    <h3 class="text-center">Experience</h3>
+<div class="container information-container">
+  <div class="card information-card">
+    <h2 class="text-center">Experience</h2>
     <div class="experience">
-      <h4>Bacon Eater</h4>
-      <h5>Pork University</h5>
-      <h6>August 2016 - Present</h6>
-      <h6>Dog Park, Doglandia</h6>
+      <h3>Bacon Eater</h3>
+      <h4>Pork University</h4>
+      <h5>August 2016 - Present</h5>
+      <h5>Dog Park, Doglandia</h5>
       <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky brisket bacon.</p>
     </div>
     <div class="experience">
-        <h4>Bacon Eater</h4>
-        <h5>Pork University</h5>
-        <h6>August 2016 - Present</h6>
-        <h6>Dog Park, Doglandia</h6>
-        <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky brisket bacon.</p>
-      </div>
+      <h3>Bacon Eater</h3>
+      <h4>Pork University</h4>
+      <h5>August 2016 - Present</h5>
+      <h5>Dog Park, Doglandia</h5>
+      <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky brisket bacon.</p>
+    </div>
   </div>
   
 </div>
 
-<div class="container">
-  <div class="card">
-    <h3 class="text-center">Skills</h3>
+<div class="container information-container">
+  <div class="card information-card">
+    <h2 class="text-center">Skills</h2>
+
+    <ul class="list-inline">
+      <li class="list-inline-item skill-pill">Roll over</li>
+      <li class="list-inline-item skill-pill">Jump</li>
+      <li class="list-inline-item skill-pill">Run</li>
+      <li class="list-inline-item skill-pill">Play dead</li>
+    </ul>
   </div>
 </div>
 
-<div class="container">
-    <div class="card">
-      <h3 class="text-center">Education</h3>
+<div class="container information-container">
+    <div class="card information-card">
+      <h2 class="text-center">Education</h2>
+
     </div>
   </div>
