--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -2,14 +2,20 @@
   <div class="cover-photo" [style.backgroundImage]="'url(src=../../../../../assets/dog-cover-photo.jpg)'"></div>
   <img class="profile-photo" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
   <div class="card card-move-up">
-    <h1>Bonnie</h1><div class="float-right"><fa-icon icon="coffee"></fa-icon></div>
+    <div class="section-header">
+      <div class="h1 section-title">Bonnie</div>
+      <div class="section-edit">Add Edit</div>
+    </div>
     <p>I am ready to conquer the world and make it less ruff for dogs everywhere. I believe in Dog Equality.</p>
   </div>
 </div>
 
 <div class="container information-container">
   <div class="card information-card">
-    <h2 class="text-center">Experience</h2>
+      <div class="section-header">
+          <div class="h2 section-title">Experience</div>
+          <div class="section-edit">Add Edit</div>
+        </div>
     <div class="experience">
       <h3>Bacon Eater</h3>
       <h4>Pork University</h4>
@@ -30,7 +36,10 @@
 
 <div class="container information-container">
   <div class="card information-card">
-    <h2 class="text-center">Skills</h2>
+      <div class="section-header">
+          <div class="h2 section-title">Skills</div>
+          <div class="section-edit">Add Edit</div>
+        </div>
 
     <ul class="list-inline">
       <li class="list-inline-item skill-pill">Roll over</li>
@@ -43,7 +52,19 @@
 
 <div class="container information-container">
     <div class="card information-card">
-      <h2 class="text-center">Education</h2>
-
+        <div class="section-header">
+            <div class="h2 section-title">Education</div>
+            <div class="section-edit">Add Edit</div>
+          </div>
+          <div class="experience">
+              <h3>Pork Univesity</h3>
+              <h4>B.S. Good Doggo</h4>
+              <h5>August 2016 - Present</h5>
+          </div>
+          <div class="experience">
+              <h3>Dogvesant High School</h3>
+              <h4>High School</h4>
+              <h5>2012 - 2016</h5>
+          </div>
     </div>
   </div>
