--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
@@ -21,14 +21,25 @@
 
 .card-move-up {
     padding-left: 215px;
+    padding-right: 20px;
     margin-top: -75px;
     z-index: 0;
 }
 
+.section-header {
+    .section-title {
+        float: left;
+    }
+
+    .section-edit {
+        float: right;
+    }
+}
 .information-container {
     margin-top: 10px;
 
     .information-card {
+        padding-top: 20px;
         padding-left: 20px;
         padding-right: 20px;
     }
