feat(app.module.ts): Added Fort Awesome

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -4,7 +4,10 @@
   <div class="card card-move-up">
     <div class="section-header">
       <div class="h1 section-title">Bonnie</div>
-      <div class="section-edit">Add Edit</div>
+      <div class="section-edit">
+          <fa-icon icon="plus" size="lg"></fa-icon>
+          <fa-icon icon="pen-square" size="lg"></fa-icon>
+      </div>
     </div>
     <p>I am ready to conquer the world and make it less ruff for dogs everywhere. I believe in Dog Equality.</p>
   </div>
@@ -14,7 +17,10 @@
   <div class="card information-card">
       <div class="section-header">
           <div class="h2 section-title">Experience</div>
-          <div class="section-edit">Add Edit</div>
+          <div class="section-edit">
+              <fa-icon icon="plus" size="lg"></fa-icon>
+              <fa-icon icon="pen-square" size="lg"></fa-icon>
+            </div>
         </div>
     <div class="experience">
       <h3>Bacon Eater</h3>
@@ -38,7 +44,10 @@
   <div class="card information-card">
       <div class="section-header">
           <div class="h2 section-title">Skills</div>
-          <div class="section-edit">Add Edit</div>
+          <div class="section-edit">
+              <fa-icon icon="plus" size="lg"></fa-icon>
+              <fa-icon icon="pen-square" size="lg"></fa-icon>
+            </div>
         </div>
 
     <ul class="list-inline">
@@ -54,7 +63,10 @@
     <div class="card information-card">
         <div class="section-header">
             <div class="h2 section-title">Education</div>
-            <div class="section-edit">Add Edit</div>
+            <div class="section-edit">
+                <fa-icon icon="plus" size="lg"></fa-icon>
+              <fa-icon icon="pen-square" size="lg"></fa-icon>
+              </div>
           </div>
           <div class="experience">
               <h3>Pork Univesity</h3>
