--- a/in-linked/src/global/_app.scss
+++ b/in-linked/src/global/_app.scss
@@ -13,6 +13,7 @@ $login-primary: $blue-dianne;
 $login-gradient-1: $elephant;
 $login-gradient-2: $chathams-blue;
 $login-warning: $gold;
+$create-warning: $scarlet;
 
 $padding-base: 1rem;
 
