--- a/in-linked/src/app/pages/create-account/create-account.component.html
+++ b/in-linked/src/app/pages/create-account/create-account.component.html
@@ -1,3 +1,29 @@
-<p>
-  create-account works!
-</p>
+<div class="create-account-container">
+    <h1>Sign up for inLinked</h1>
+    <form #create="ngForm" (ngSubmit)="onSubmit();">
+      <div *ngIf="errorMessage" class="create-warning-message">{{errorMessage}}</div>
+      <div class="form-group">
+        <label for="user-name">Name/Enterprise</label>
+        <input name="user-name" type="text" class="form-control" id="user-name" [(ngModel)]="userName" #name="ngModel" required>
+        <div class="create-warning-message" *ngIf="name.touched && name.errors?.required">Please enter a name.</div>
+      </div>
+      <div class="form-group">
+        <label for="user-email">Email</label>
+        <input name="user-email" type="text" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
+        <div class="create-warning-message" *ngIf="email.touched && email.errors?.required">Please enter an email.</div>
+      </div>
+      <div class="form-group">
+        <label for="user-password">Password</label>
+        <input name="user-password" type="password" class="form-control" id="user-password" [(ngModel)]="userPassword" #password="ngModel" required>
+        <div class="create-warning-message" *ngIf="password.touched && password.errors?.required">Please enter a password.</div>
+      </div>
+      <div class="form-group">
+        <div class="form-check">
+          <input name="enterprise-check" class="form-check-input" type="checkbox" id="enterprise-check" [(ngModel)]="enterpriseCheck">
+        </div>
+      </div>
+      <div class="row">
+        <button type="submit" class="btn btn-success" [disabled]="!create.form.valid">Submit</button>
+      </div>
+    </form> 
+</div>
