feat(title-section-modal): Added a title section modal

--- a/in-linked/src/app/layouts/navbar/navbar.component.html
+++ b/in-linked/src/app/layouts/navbar/navbar.component.html
@@ -16,8 +16,8 @@
         <li class="nav-item">
           <a class="nav-link" routerLink="./jobs">Jobs</a>
         </li>
-        <li>
-          <a class="nav-link" routerLink="./candidate">Sammi</a>
+        <li class="nav-item">
+          <a class="nav-link" routerLink="./candidate">My Profile</a>
         </li>
       </ul>
     </div>
