--- a/in-linked/src/app/layouts/navbar/navbar.component.scss
+++ b/in-linked/src/app/layouts/navbar/navbar.component.scss
@@ -3,6 +3,10 @@
 .navbar {
     background-color: $nav-background;
     color: white;
+
+    .nav-item {
+        white-space: nowrap;
+    }
 }
 
 .search-form {
