--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -5,7 +5,7 @@
     <div class="section-header">
       <div class="h1 section-title">Bonnie</div>
       <div class="section-edit">
-          <app-candidate-title-section-modal></app-candidate-title-section-modal>
+        <app-candidate-title-section-modal></app-candidate-title-section-modal>
       </div>
     </div>
     <p>I am ready to conquer the world and make it less ruff for dogs everywhere. I believe in Dog Equality.</p>
@@ -14,40 +14,48 @@
 
 <div class="container information-container">
   <div class="card information-card">
-      <div class="section-header">
-          <div class="h2 section-title">Experience</div>
-          <div class="section-edit">
-              <fa-icon icon="plus" size="lg"></fa-icon>
-              <fa-icon [icon]="['far', 'edit']" size="lg"></fa-icon>
-            </div>
-        </div>
-    <div class="experience">
-      <h3>Bacon Eater</h3>
-      <h4>Pork University</h4>
-      <h5>August 2016 - Present</h5>
-      <h5>Dog Park, Doglandia</h5>
-      <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky brisket bacon.</p>
+    <div class="section-header">
+      <div class="h2 section-title">Experience</div>
+      <div class="section-edit">
+        <app-candidate-experience-section-modal></app-candidate-experience-section-modal>
+      </div>
     </div>
     <div class="experience">
       <h3>Bacon Eater</h3>
       <h4>Pork University</h4>
       <h5>August 2016 - Present</h5>
       <h5>Dog Park, Doglandia</h5>
-      <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky brisket bacon.</p>
+      <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner
+        boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner
+        andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork
+        chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo
+        biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky
+        brisket bacon.</p>
+    </div>
+    <div class="experience">
+      <h3>Bacon Eater</h3>
+      <h4>Pork University</h4>
+      <h5>August 2016 - Present</h5>
+      <h5>Dog Park, Doglandia</h5>
+      <p>Bacon ipsum dolor amet shoulder tongue chicken, kielbasa jerky biltong swine sirloin picanha. Turkey doner
+        boudin kevin pastrami flank hamburger tail bresaola chicken leberkas shank ball tip pork belly jerky. Doner
+        andouille ham hock cow ground round jerky filet mignon pork loin hamburger pig meatloaf beef meatball pork
+        chop. Turducken flank hamburger tri-tip sausage boudin chicken. Ham chicken shankle ground round buffalo
+        biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky
+        brisket bacon.</p>
     </div>
   </div>
-  
+
 </div>
 
 <div class="container information-container">
   <div class="card information-card">
-      <div class="section-header">
-          <div class="h2 section-title">Skills</div>
-          <div class="section-edit">
-              <fa-icon icon="plus" size="lg"></fa-icon>
-              <fa-icon [icon]="['far', 'edit']" size="lg"></fa-icon>
-            </div>
-        </div>
+    <div class="section-header">
+      <div class="h2 section-title">Skills</div>
+      <div class="section-edit">
+        <app-candidate-skills-section-modal></app-candidate-skills-section-modal>
+      </div>
+    </div>
 
     <ul class="list-inline">
       <li class="list-inline-item skill-pill">Roll over</li>
@@ -59,23 +67,22 @@
 </div>
 
 <div class="container information-container">
-    <div class="card information-card">
-        <div class="section-header">
-            <div class="h2 section-title">Education</div>
-            <div class="section-edit">
-                <fa-icon icon="plus" size="lg"></fa-icon>
-                <fa-icon [icon]="['far', 'edit']" size="lg"></fa-icon>
-              </div>
-          </div>
-          <div class="experience">
-              <h3>Pork Univesity</h3>
-              <h4>B.S. Good Doggo</h4>
-              <h5>August 2016 - Present</h5>
-          </div>
-          <div class="experience">
-              <h3>Dogvesant High School</h3>
-              <h4>High School</h4>
-              <h5>2012 - 2016</h5>
-          </div>
+  <div class="card information-card">
+    <div class="section-header">
+      <div class="h2 section-title">Education</div>
+      <div class="section-edit">
+        <fa-icon [icon]="['far', 'edit']" size="lg"></fa-icon>
+      </div>
+    </div>
+    <div class="experience">
+      <h3>Pork Univesity</h3>
+      <h4>B.S. Good Doggo</h4>
+      <h5>August 2016 - Present</h5>
+    </div>
+    <div class="experience">
+      <h3>Dogvesant High School</h3>
+      <h4>High School</h4>
+      <h5>2012 - 2016</h5>
     </div>
   </div>
+</div>
