feat(education-section-modal): Added candidate educations section modal

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -32,6 +32,7 @@
         biltong. Pork chop boudin bresaola beef jerky brisket shoulder pancetta. Burgdoggen ribeye porchetta jerky
         brisket bacon.</p>
     </div>
+    <hr>
     <div class="experience">
       <h3>Bacon Eater</h3>
       <h4>Pork University</h4>
@@ -71,16 +72,19 @@
     <div class="section-header">
       <div class="h2 section-title">Education</div>
       <div class="section-edit">
-        <fa-icon [icon]="['far', 'edit']" size="lg"></fa-icon>
+          <app-candidate-education-section-modal></app-candidate-education-section-modal>
       </div>
     </div>
-    <div class="experience">
+    <div class="education">
       <h3>Pork Univesity</h3>
+      <h4>Bark Bark, CT </h4>
       <h4>B.S. Good Doggo</h4>
       <h5>August 2016 - Present</h5>
     </div>
-    <div class="experience">
+    <hr>
+    <div class="education">
       <h3>Dogvesant High School</h3>
+      <h4> Bark, NY </h4>
       <h4>High School</h4>
       <h5>2012 - 2016</h5>
     </div>
