feat(candidate-profile): Added hovering color and pointer change

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.scss
@@ -26,6 +26,11 @@
     z-index: 0;
 }
 
+fa-icon:hover {
+    cursor: pointer;
+    color: $blue-ribbon;
+}
+
 .section-header {
     .section-title {
         float: left;
