--- a/in-linked/src/app/pages/candidate-profile/education-section-modal/education-section-modal.component.html
+++ b/in-linked/src/app/pages/candidate-profile/education-section-modal/education-section-modal.component.html
@@ -1,6 +1,6 @@
 <ng-template #content let-d="dismiss">
   <div class="modal-header">
-    <h4 class="modal-title" id="candidate-title-section">Update your Educations</h4>
+    <h4 class="modal-title" id="candidate-title-section">Update Education</h4>
     <button type="button" class="close" aria-label="Close" (click)="d('Cross click')">
       <span aria-hidden="true">&times;</span>
     </button>
