--- a/in-linked/src/app/pages/candidate-profile/experience-section-modal/experience-section-modal.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/experience-section-modal/experience-section-modal.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../global/app';
+
 .experience-container {
     border-top: 2px solid;
     border-top-color: grey;
@@ -9,4 +11,9 @@
 
 .remove-experience {
     float: right;
+}
+
+fa-icon:hover {
+    cursor: pointer;
+    color: $blue-ribbon;
 }
