--- a/in-linked/src/app/pages/candidate-profile/skills-section-modal/skills-section-modal.component.scss
+++ b/in-linked/src/app/pages/candidate-profile/skills-section-modal/skills-section-modal.component.scss
@@ -1,3 +1,5 @@
+@import '../../../../global/app';
+
 .skill-name {
     padding-left: 0;
     padding-right: 0;
@@ -5,4 +7,9 @@
 
 .skill-remove {
     padding-left: 0;
+}
+
+fa-icon:hover {
+    cursor: pointer;
+    color: $blue-ribbon;
 }
