feat(candidate-profil): Added classes for hovering icon

--- a/in-linked/src/app/pages/candidate-profile/experience-section-modal/experience-section-modal.component.html
+++ b/in-linked/src/app/pages/candidate-profile/experience-section-modal/experience-section-modal.component.html
@@ -102,4 +102,4 @@
   </div>
 </ng-template>
 
-<fa-icon [icon]="['far', 'edit']" size="lg" (click)="open(content)"></fa-icon>
+<fa-icon class="edit" [icon]="['far', 'edit']" size="lg" (click)="open(content)"></fa-icon>
