feat(entprise-profile): Added modals to title and fast facts sections

--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -1,7 +1,7 @@
 <div class="container title-section">
   <div class="cover-photo" [style.backgroundImage]="'url(src=../../../../../assets/dog-cover-photo.jpg)'"></div>
   <img class="profile-photo" src="http://phoenixcavaliers.com/wp-content/uploads/Blenheim-puppy-Tatum-web-4.jpg">
-  <div class="card card-move-up">
+  <div class="card card-move-up title-section">
     <div class="section-header">
       <div class="h1 section-title">Bonnie</div>
       <div class="section-edit">
