--- a/in-linked/src/app/pages/enterprise-profile/enterprise-profile.component.html
+++ b/in-linked/src/app/pages/enterprise-profile/enterprise-profile.component.html
@@ -1,3 +1,29 @@
-<p>
-  enterprise-profile works!
-</p>
+<div class="container title-section">
+  <div class="cover-photo" [style.backgroundImage]="'url(src=../../../../../assets/petco.jpg)'"></div>
+  <img class="profile-photo" src="../../../assets/dog-butt.png">
+  <div class="card card-move-up title-section">
+    <div class="section-header">
+      <div class="section-title h1">
+        Petco
+      </div>
+      <div class="section-edit">
+        <app-enterprise-title-section-modal></app-enterprise-title-section-modal>
+      </div>
+    </div>
+    <p>We sell all kings of animals! Find food, toys, and your match-in-heaven pet.</p>
+  </div>
+</div>
+
+<div class="container information-container">
+  <div class="card information-card">
+    <div class="section-header">
+      <div class="h2 section-title">Fast Facts</div>
+      <div class="section-edit">
+        <app-enterprise-fast-facts-section-modal></app-enterprise-fast-facts-section-modal>
+      </div>
+    </div>
+    <h3> Headquarters: Petland </h3>
+    <h3> CEO: Pupper Doggo </h3>
+    <h3> Industry: Food & Drugs </h3>
+  </div> 
+</div>
