--- a/in-linked/src/app/pages/login/login.component.html
+++ b/in-linked/src/app/pages/login/login.component.html
@@ -9,7 +9,7 @@
         <div *ngIf="errorMessage" class="login-warning-message">{{errorMessage}}</div>
         <div class="form-group">
           <label for="user-email">Email</label>
-          <input name="user-email" type="text" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
+          <input name="user-email" type="email" class="form-control" id="user-email" [(ngModel)]="userEmail" #email="ngModel" required>
           <div class="login-warning-message" *ngIf="email.touched && email.errors?.required">Please enter an email.</div>
         </div>
         <div class="form-group">
