feat(user.service.ts): Fixes with handling candidate data passed in by API

--- a/in-linked/src/app/pages/service-test/service-test.component.html
+++ b/in-linked/src/app/pages/service-test/service-test.component.html
@@ -6,6 +6,7 @@
     <div class="text-center">
       <button (click)="testGetCurrentUser()">Get Current User</button>
       <button (click)="testGetUserById()">Get User By Id</button>
+      <button (click)="testGetUserByName()">Get User By Name</button>
     </div>
     <div class="row">
       <div class="col-12">
