--- a/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
+++ b/in-linked/src/app/pages/candidate-profile/candidate-profile.component.html
@@ -10,6 +10,7 @@
     </div>
     <p>I am ready to conquer the world and make it less ruff for dogs everywhere. I believe in Dog Equality.</p>
   </div>
+  <button (click)="test()">rghh</button>
 </div>
 
 <div class="container information-container">
