feat(in-linked): Improved code consistency, hooked user loading with profiles (candidate and enterprise), removed href in navbar which triggered full refresh, service updates

--- a/in-linked/src/app/layouts/dashboard/container/dashboard/dashboard.component.html
+++ b/in-linked/src/app/layouts/dashboard/container/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
 <div class="dashboard-container" >
-  <app-nav></app-nav>
+  <app-nav [profileType]="acctype || ''" [profileName]="username || ''"></app-nav>
   <router-outlet></router-outlet>
 </div>
