--- a/in-linked/src/app/pages/enterprise-profile/enterprise-profile.component.html
+++ b/in-linked/src/app/pages/enterprise-profile/enterprise-profile.component.html
@@ -4,26 +4,32 @@
   <div class="card card-move-up title-section">
     <div class="section-header">
       <div class="section-title h1">
-        Petco
+        {{ (enterprise)?.enterpriseName || 'test' }}
       </div>
       <div class="section-edit">
         <app-enterprise-title-section-modal></app-enterprise-title-section-modal>
       </div>
     </div>
-    <p>We sell all kings of animals! Find food, toys, and your match-in-heaven pet.</p>
+    <p>{{ (enterprise)?.headline || 'test' }}</p>
   </div>
 </div>
 
 <div class="container information-container">
   <div class="card information-card">
     <div class="section-header">
-      <div class="h2 section-title">About Us</div>
+      <div class="h4 section-title pb-3">About Us</div>
       <div class="section-edit">
         <app-enterprise-fast-facts-section-modal></app-enterprise-fast-facts-section-modal>
       </div>
     </div>
-    <h5> Headquarters: {{ enterprise.headquarters }} </h5>
-    <h5> CEO: {{ enterprise.ceo }} </h5>
-    <h5> Industry: {{ enterprise.industry }} </h5>
+    <p>{{ (enterprise)?.enterpriseDescription }}</p>
+
+    <div class="h4 section-title pb-3">Company Details</div>
+    <p class="mb-1"><strong>Headquarters</strong></p>
+    <p class="text-secondary mb-2">{{ (enterprise)?.headquarters || 'Not listed...' }}</p>
+    <p class="mb-1"><strong>CEO</strong></p>
+    <p class="text-secondary mb-2">{{ (enterprise)?.ceo || "Not listed..." }}</p>
+    <p class="mb-1"><strong>Headquarters</strong></p>
+    <p class="text-secondary mb-2">{{ (enterprise)?.industry || "Not listed..." }}</p>
   </div> 
 </div>
